<resources>
    <string name="app_name">Newsy</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="saved_article">Saved Article</string>
    <string name="search_articles">Search Articles</string>
    <string name="bitcoin">bitcoin</string>
    <string name="searching_news_hear">Searching news hear</string>
</resources>